Updated TOC ignores

--- a/slides/12_10x10_grid.md
+++ b/slides/12_10x10_grid.md
@@ -31,6 +31,7 @@ function setup() {
 ---
 layout: two-cols-header
 layoutClass: gap-x-6 gap-y-2 p-10
+hideInToc: true
 ---
 
 # Building a 10x10 Grid
@@ -68,6 +69,7 @@ layoutClass: gap-x-6 gap-y-2 p-10
 ---
 layout: two-cols-header
 layoutClass: gap-x-6 gap-y-2 p-10
+hideInToc: true
 ---
 
 # Building a 10x10 Grid
@@ -104,6 +106,7 @@ layoutClass: gap-x-6 gap-y-2 p-10
 ---
 layout: two-cols-header
 layoutClass: gap-x-6 gap-y-2 p-10
+hideInToc: true
 ---
 
 # Building a 10x10 Grid
@@ -134,6 +137,7 @@ Now add lines from the centre of the square and rotate it at random angles
 ---
 layout: two-cols-header
 layoutClass: gap-x-6 gap-y-2 p-10
+hideInToc: true
 ---
 
 # Finished Piece
