added local images

--- a/slides/12_10x10_grid.md
+++ b/slides/12_10x10_grid.md
@@ -1,6 +1,6 @@
 ---
 layout: image-left
-image: https://github.com/montaynej/Images-for-Slides/blob/main/Screenshot%202026-01-16%20at%2014.28.56.png?raw=true
+image: /images/Screenshot%202026-01-16%20at%2014.28.56.png?raw=true
 ---
 
 # Building a 10x10 Grid
@@ -63,7 +63,7 @@ hideInToc: true
 ::right::
 
 <div>
-<img src="https://github.com/montaynej/Images-for-Slides/blob/main/Screenshot%202026-01-22%20at%2021.26.06.png?raw=true" alt="Chart" style="width: 80%" />
+<img src="/images/Screenshot%202026-01-22%20at%2021.26.06.png?raw=true" alt="Chart" style="width: 80%" />
 </div>
 
 ---
@@ -100,7 +100,7 @@ hideInToc: true
 ::right::
 
 <div>
-<img src="https://github.com/montaynej/Images-for-Slides/blob/main/Screenshot%202026-01-22%20at%2021.43.56.png?raw=true" alt="Chart" style="width: 80%" />
+<img src="/images/Screenshot%202026-01-22%20at%2021.43.56.png?raw=true" alt="Chart" style="width: 80%" />
 </div>
 
 ---
@@ -130,7 +130,7 @@ Now add lines from the centre of the square and rotate it at random angles
 ::right::
 
 <div>
-<img src="https://github.com/montaynej/Images-for-Slides/blob/main/Screenshot%202026-01-22%20at%2021.44.24.png?raw=true" alt="Chart" style="width: 80%" />
+<img src="/images/Screenshot%202026-01-22%20at%2021.44.24.png?raw=true" alt="Chart" style="width: 80%" />
 </div>
 
 
@@ -163,7 +163,7 @@ hideInToc: true
 ::right::
 
 <div>
-<img src="https://github.com/montaynej/Images-for-Slides/blob/main/Screenshot%202026-01-16%20at%2014.28.56.png?raw=true" alt="Chart" style="width: 80%" />
+<img src="/images/Screenshot%202026-01-16%20at%2014.28.56.png?raw=true" alt="Chart" style="width: 80%" />
 </div>
 
 
