--- a/slides/12_10x10_grid.md
+++ b/slides/12_10x10_grid.md
@@ -1,6 +1,6 @@
 ---
 layout: image-left
-image: /images/Screenshot%202026-01-16%20at%2014.28.56.png?raw=true
+image: /images/screenshot01.png
 ---
 
 # Building a 10x10 Grid
@@ -163,7 +163,7 @@ hideInToc: true
 ::right::
 
 <div>
-<img src="/images/Screenshot%202026-01-16%20at%2014.28.56.png?raw=true" alt="Chart" style="width: 80%" />
+<img src="/images/screenshot01.png" alt="Chart" style="width: 80%" />
 </div>
 
 
