--- a/slides/12_10x10_grid.md
+++ b/slides/12_10x10_grid.md
@@ -1,6 +1,6 @@
 ---
 layout: image-left
-image: /images/screenshot01.png
+image: /images/grid_circles.png
 ---
 
 # Building a 10x10 Grid
@@ -63,7 +63,7 @@ hideInToc: true
 ::right::
 
 <div>
-<img src="/images/Screenshot%202026-01-22%20at%2021.26.06.png?raw=true" alt="Chart" style="width: 80%" />
+<img src="/images/grid_00.png" alt="Chart" style="width: 80%" />
 </div>
 
 ---
@@ -100,7 +100,7 @@ hideInToc: true
 ::right::
 
 <div>
-<img src="/images/Screenshot%202026-01-22%20at%2021.43.56.png?raw=true" alt="Chart" style="width: 80%" />
+<img src="/images/Grid_colour.png" alt="Chart" style="width: 80%" />
 </div>
 
 ---
@@ -130,7 +130,7 @@ Now add lines from the centre of the square and rotate it at random angles
 ::right::
 
 <div>
-<img src="/images/Screenshot%202026-01-22%20at%2021.44.24.png?raw=true" alt="Chart" style="width: 80%" />
+<img src="/images/Grid_square_random.png" alt="Chart" style="width: 80%" />
 </div>
 
 
@@ -163,7 +163,7 @@ hideInToc: true
 ::right::
 
 <div>
-<img src="/images/screenshot01.png" alt="Chart" style="width: 80%" />
+<img src="/images/grid_circles.png" alt="Chart" style="width: 80%" />
 </div>
 
 
