added local images

--- a/slides/12_10x10_grid.md
+++ b/slides/12_10x10_grid.md
@@ -63,7 +63,7 @@ hideInToc: true
 ::right::
 
 <div>
-<img src="/images/grid_00.png" alt="Chart" style="width: 80%" />
+<img src="/grid_00.png" alt="Chart" style="width: 80%" />
 </div>
 
 ---
@@ -100,7 +100,7 @@ hideInToc: true
 ::right::
 
 <div>
-<img src="/images/Grid_colour.png" alt="Chart" style="width: 80%" />
+<img src="/Grid_colour.png" alt="Chart" style="width: 80%" />
 </div>
 
 ---
@@ -130,7 +130,7 @@ Now add lines from the centre of the square and rotate it at random angles
 ::right::
 
 <div>
-<img src="/images/Grid_square_random.png" alt="Chart" style="width: 80%" />
+<img src="/Grid_square_random.png" alt="Chart" style="width: 80%" />
 </div>
 
 
@@ -163,7 +163,7 @@ hideInToc: true
 ::right::
 
 <div>
-<img src="/images/grid_circles.png" alt="Chart" style="width: 80%" />
+<img src="/grid_circles.png" alt="Chart" style="width: 80%" />
 </div>
 
 
